--- a/index.html
+++ b/index.html
@@ -1,10 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Real Estate Futuristic Building Design</title>
+    <link rel="stylesheet" href="header.css" />
+    <link rel="stylesheet" href="landing-page.css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="header">
+        <div class="logo">
+          <img src="/images/real estate logo.png" alt="" />
+        </div>
+        <div class="nav-bar">
+          <div>Home</div>
+          <div>Features</div>
+          <div>About</div>
+          <div>Contact</div>
+          <div><img src="/images/search.png" alt="" /></div>
+          <div><img src="/images/list.png" alt="" /></div>
+        </div>
+      </div>
+      <div class="landing-page">
+        <div class="landing-page-leftside">
+          <div class="tower-section">
+            <div class="absolute-box">
+              <div class="home-icon">
+                <img src="/images/home-icon.png" alt="" />
+              </div>
+              <div class="absolute-description">
+                Best Real <br />
+                Estate <br />
+                top rated <br />
+                luxury <br />
+                Building Here
+              </div>
+              <div class="star-icon">
+                <img src="/images/star-icon.png" alt="" /><label>5.0</label>
+              </div>
+            </div>
+            <div class="tower-box">
+              <img src="/images/tower.png" alt="" />
+            </div>
+          </div>
+          <div class="profile">vvvvvv</div>
+        </div>
+        <div class="landing-page-rightside">bbbbbb</div>
+      </div>
+    </div>
+  </body>
 </html>
