Add landing page and page 2

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>Real Estate Futuristic Building Design</title>
     <link rel="stylesheet" href="header.css" />
     <link rel="stylesheet" href="landing-page.css" />
+    <link rel="stylesheet" href="parent-box.css" />
+    <link rel="stylesheet" href="page2.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -49,9 +51,78 @@
               <img src="/images/tower.png" alt="" />
             </div>
           </div>
-          <div class="profile">vvvvvv</div>
+          <div class="profile">
+            <div class="profile-pic">
+              <img src="/images/profile-pic.png" alt="" />
+            </div>
+            <div class="profile-description">
+              Marina Albert <br /><label class="grey-text"
+                >Founder Dubai Mall</label
+              >
+            </div>
+          </div>
         </div>
-        <div class="landing-page-rightside">bbbbbb</div>
+        <div class="landing-page-rightside">
+          <div class="landing-page-rightside-description">
+            Real Estate <br />Futuristic Building <br />
+            Designs
+          </div>
+          <div class="rightside-greytext">
+            We Provide <br />
+            Best Deals Best Prices
+          </div>
+
+          <div class="rightside-button">
+            Get Started <img src="/images/arrow-right-circle.png" />
+          </div>
+        </div>
+        <div class="parent-box">
+          <div class="button-tool">
+            <div class="active">Buy</div>
+            <div>Sell</div>
+            <div>Rent</div>
+          </div>
+          <div class="info-tool">
+            <div class="info-tool-box">
+              <div class="info-tool-box-texts">
+                <div class="info-tool-box-title">Locations</div>
+                <div class="info-tool-box-value">Dubai</div>
+              </div>
+            </div>
+            <div class="info-tool-box">
+              <div class="info-tool-box-texts">
+                <div class="info-tool-box-title">Type of Property</div>
+                <div class="info-tool-box-value">Premium</div>
+              </div>
+            </div>
+            <div class="info-tool-box borderless">
+              <div class="info-tool-box-texts">
+                <div class="info-tool-box-title">Budget</div>
+                <div class="info-tool-box-value">$12000</div>
+              </div>
+            </div>
+            <div class="parent-box-button">Search</div>
+            </div>
+          </div>
+        </div>
+        <div class="page2">
+          <div class="page2-left">
+            <div class="page2-left-title">
+              <div class="line"></div>
+              <div class="text">Popular</div>
+            </div>
+            <div class="page2-left-pic"><img src="/images/page2-left-pic.png" alt="" /></div>
+          </div>
+          <div class="page2-center">
+            <div class="page2-center-pic"><img src="/images/page2-center.png" alt="" /></div>
+            <div class="page2-center-button">Explore All<img src="/images/arrow-up-right.png" alt="" /></div>
+          </div>
+          <div class="page2-right">
+            <div class="page2-right-title">Our Popular <br />
+              Residence</div>
+            <div class="page2-right-pic"><img src="/images/page2-right-pic.png" alt="" /></div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
