--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 Building Here
               </div>
               <div class="star-icon">
-                <img src="/images/star-icon.png" alt="" /><label>5.0</label>
+                <img src="/images/star-icon.png" alt="" />&nbsp;&nbsp;<label>5.0</label>
               </div>
             </div>
             <div class="tower-box">
