--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="landing-page.css" />
     <link rel="stylesheet" href="parent-box.css" />
     <link rel="stylesheet" href="page2.css" />
+    <link rel="stylesheet" href="page3.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -32,7 +33,7 @@
       <div class="landing-page">
         <div class="landing-page-leftside">
           <div class="tower-section">
-            <div class="absolute-box">
+            <div class="absolute-tower-box">
               <div class="home-icon">
                 <img src="/images/home-icon.png" alt="" />
               </div>
@@ -44,7 +45,9 @@
                 Building Here
               </div>
               <div class="star-icon">
-                <img src="/images/star-icon.png" alt="" />&nbsp;&nbsp;<label>5.0</label>
+                <img src="/images/star-icon.png" alt="" />&nbsp;&nbsp;<label
+                  >5.0</label
+                >
               </div>
             </div>
             <div class="tower-box">
@@ -102,25 +105,89 @@
               </div>
             </div>
             <div class="parent-box-button">Search</div>
-            </div>
           </div>
         </div>
-        <div class="page2">
-          <div class="page2-left">
-            <div class="page2-left-title">
-              <div class="line"></div>
-              <div class="text">Popular</div>
+      </div>
+      <div class="page2">
+        <div class="page2-left">
+          <div class="page2-left-title">
+            <div class="line"></div>
+            <div class="text">Popular</div>
+          </div>
+          <div class="page2-left-pic">
+            <img src="/images/page2-left-pic.png" alt="" />
+          </div>
+        </div>
+        <div class="page2-center">
+          <div class="page2-center-pic">
+            <img src="/images/page2-center.png" alt="" />
+          </div>
+          <div class="page2-center-button">
+            Explore All<img src="/images/arrow-up-right.png" alt="" />
+          </div>
+        </div>
+        <div class="page2-right">
+          <div class="page2-right-title">
+            Our Popular <br />
+            Residence
+          </div>
+          <div class="page2-right-pic">
+            <img src="/images/page2-right-pic.png" alt="" />
+          </div>
+        </div>
+      </div>
+      <div class="page3">
+        <div class="page3-leftside">
+          <div class="page3-left-title">
+            <div class="line"></div>
+            <div class="text">About Us</div>
+          </div>
+          <div class="page3-title page2-right-title">Why Should we?</div>
+          <div class="page3-left-pic">
+            <img src="/images/page3-left-pic.png" alt="" />
+          </div>
+        </div>
+        <div class="page3-rightside">
+          <div class="page3-right-pic">
+            <img src="/images/page3-right-pic.png" alt="" />
+          </div>
+          <div class="page3-right-description">
+            The printing and typesetting industry.Lorem Ipsum has been the
+            industry's standard dummy text ever since the 1500s,when an unknown
+            printer took a galley of type and scrambled it to make a type
+            specimen book.
+          </div>
+        </div>
+        <div class="page3-absolute-box">
+          <div class="page3-absolute-box1">
+            <div class="box-icon">
+              <img src="/images/box1-icon.png" alt="" />
             </div>
-            <div class="page2-left-pic"><img src="/images/page2-left-pic.png" alt="" /></div>
+            <div class="box-title">The Right Budget</div>
+            <div class="box-description">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry.
+            </div>
           </div>
-          <div class="page2-center">
-            <div class="page2-center-pic"><img src="/images/page2-center.png" alt="" /></div>
-            <div class="page2-center-button">Explore All<img src="/images/arrow-up-right.png" alt="" /></div>
+          <div class="page3-absolute-box2">
+            <div class="box-icon">
+              <img src="/images/box2-icon.png" alt="" />
+            </div>
+            <div class="box-title">Mega Sales Offer</div>
+            <div class="box-description">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry.
+            </div>
           </div>
-          <div class="page2-right">
-            <div class="page2-right-title">Our Popular <br />
-              Residence</div>
-            <div class="page2-right-pic"><img src="/images/page2-right-pic.png" alt="" /></div>
+          <div class="page3-absolute-box3">
+            <div class="box-icon">
+              <img src="/images/box3-icon.png" alt="" />
+            </div>
+            <div class="box-title">Sales Booster</div>
+            <div class="box-description">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry.
+            </div>
           </div>
         </div>
       </div>
