--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="parent-box.css" />
     <link rel="stylesheet" href="page2.css" />
     <link rel="stylesheet" href="page3.css" />
+    <link rel="stylesheet" href="page4.css" />
+    <link rel="stylesheet" href="page5.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -189,6 +191,72 @@
               industry.
             </div>
           </div>
+        </div>
+      </div>
+      <div class="page4">
+        <div class="page4-leftside">
+          <div class="page4-left-pic">
+            <img src="/images/page4-left-pic.png" alt="" />
+          </div>
+          <div class="page4-left-button">
+            <div class="page4-left-pic-button">
+              <img src="/images/arrow-right.png" alt="" />
+            </div>
+            <div class="page4-left-pic-see-more">See More</div>
+          </div>
+        </div>
+        <div class="page4-rightside page3-left-title">
+          <div class="page4-rightside">
+            <div class="page4-right-title">
+              <div class="line"></div>
+              <div class="text">Our Service</div>
+            </div>
+            <div class="page3-title page2-right-title">
+              Avalaible Services <br />
+              We Do
+            </div>
+            <div class="page4-description">
+              We provide everything <br />
+              <br />
+              Rent For House Party <br />
+              <br />
+              Co-working space <br />
+              <br />
+              Short term meeting
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="page5">
+        <div class="page5-header">
+          <div class="page5-header-content-title">
+            <div class="title-content">140K+</div>
+            <div class="content">
+              People Choose <br />
+              us
+            </div>
+          </div>
+          <div class="page5-header-content-title">
+            <div class="title-content">>60K</div>
+            <div class="content">
+              Good <br />
+              Testimonal
+            </div>
+          </div>
+          <div class="page5-header-content-title">
+            <div class="title-content">92%</div>
+            <div class="content">
+              Level of good <br />
+              Comments
+            </div>
+          </div>
+        </div>
+        <div class="page5-content">
+          <div class="page5-left-profile">
+            <div class="page5-profile"></div>
+          </div>
+          <div class="page5-mid-pic"></div>
+          <div class="page5-right-content"></div>
         </div>
       </div>
     </div>
